# kekov_soundboard

./: .gitignore  README.md
blesavi_bot/: bot.js  package-lock.json  package.json
board/: .gitignore  Cargo.toml
board/src/: controls.rs  dumpster_base.rs  index.rs  logged_guard.rs  login.rs  main.rs  nekaj_za_znidarica.rs  prelude.rs  upload.rs  websocket_voice_monitor.rs  websocket_voice_monitor_server.rs
board/static/css/: edit.css  filter.css  grid-container.css  index.css  login.css  navbar.css  navbarlogout.css  upload.css  websocket_voice_monitor.css
board/static/js/: controls.js  display_buttons_edit.js  display_buttons_index.js  edit.js  filter.js  index.js  random_gospon_menadzer.js  upload.js  websocket_voice_monitor.js
board/templates/: 404.html  banajMatijosa.html  edit.html  index.html  login.html  loginZnidaric.html  upload.html
