[package]
name = "board"
version = "0.1.0"
authors = ["Hrvoje Lesar <hrvoje.lesar1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="2.0.0", features = ["openssl"] }
actix-files = "0.2.2"
actix-identity = "0.2.1"
actix-rt = "1.1.1"
actix-service = "1.0.5"
# diesel = { version = "1.4.4", features = ["postgres"] }
env_logger = "0.7.1"
handlebars = { version = "3.2.1", features = ["dir_source"] }
openssl = "0.10.30"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.42"

futures = "0.3.5"
actix-session = "0.3.0"